# griffin-mail

./: .gitignore  Cargo.toml  README.md  config.toml  create_test_pg.sh  test-config.toml
migrations/: 1_InitialTables.sql  2_EmailTables.sql
src/: auth.rs  config.rs  default_route_handlers.rs  email_route_handlers.rs  main.rs  middleware.rs  routes.rs  user.rs  utilities.rs
src/default_route_handlers/: validations.rs
src/tests/: mod.rs
